--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "dev": "set DEBUG=express-mongoose-crud-api:* && npm start",
     "mongodb": "docker run --name mongodb -d -p 27017:27017 mongo:3.7.3-jessie",
     "mongodbstart": "docker start mongodb",
