--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "request": "^2.85.0"
   },
   "devDependencies": {
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "request-promise": "^4.2.2"
   }
 }
