--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "test": "node ./node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.4",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "mongoose": "^5.0.14",
-    "morgan": "~1.9.0",
-    "request": "^2.85.0"
+    "mongoose": "^5.4.20",
+    "morgan": "^1.9.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "jest": "^22.4.3",
-    "request-promise": "^4.2.2"
+    "jest": "^22.4.4",
+    "request-promise": "^4.2.4"
   }
 }
